--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
+project(otto_throttle CXX)
+cmake_minimum_required(VERSION 2.8)
+
 add_subdirectory(xplane_sdk)
-add_xplane_plugin(Otto Throttle otto_throttle.cpp)
+add_xplane_plugin(otto_throttle 301 otto_throttle.cpp)
