--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,6 @@ on:
   release:
     type: [created, edited]
 
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: RelWithDebInfo
-
 jobs:
   build:
     strategy:
@@ -31,24 +27,20 @@ jobs:
       if: runner.os == 'Windows'
       shell: bash
       run: |
-        # Select MinGW toolchain instead of the default MSVC.
-        echo "CMAKE_GENERATOR=MinGW Makefiles" >> $GITHUB_ENV
+        choco install git cmake
+
     - name: "Linux: Install dependency libraries"
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends freeglut3-dev libudev-dev libopenal-dev
-    - name: Configure CMake
-      working-directory: ${{github.workspace}}/src
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        sudo apt-get install -y --no-install-recommends cmake
 
     - name: Build
-      working-directory: ${{github.workspace}}/src
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
-    - name: Test
-      working-directory: ${{github.workspace}}/build
-      run: ctest -C ${{env.BUILD_TYPE}}
+      working-directory: ${{github.workspace}}
+      run: |
+        mkdir build
+        cd build
+        cmake ../src && make
       
     - uses: actions/upload-artifact@v2
       with:
