--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,11 +36,10 @@ jobs:
         sudo apt-get install -y --no-install-recommends cmake
 
     - name: Build
-      working-directory: ${{github.workspace}}
+      #working-directory: ${{github.workspace}}
       run: |
         mkdir build
-        cd build
-        cmake ../src && make
+        cmake -S ../src -B ./build && make
       
     - uses: actions/upload-artifact@v2
       with:
