--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: CMake
+name: Build
 
 on:
   push:
-    branches: ["*"]
+    branches: [native]
   pull_request:
-    branches: ["*"]
+    branches: [native]
   release:
     type: [created, edited]
 
@@ -22,6 +22,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: true
 
     - name: "Windows: Configure environment"
       if: runner.os == 'Windows'
