--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       #working-directory: ${{github.workspace}}
       run: |
         mkdir build
-        cmake -S ./src -B ./build && make
+        cmake -S ./src -B ./build && make ./build
       
     - uses: actions/upload-artifact@v2
       with:
