--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,5 +46,5 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: binaries
-        path: ${{github.workspace}}/build/*.xpl
+        path: ${{github.workspace}}/build/
         if-no-files-found: error
