--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         sudo apt-get install -y --no-install-recommends cmake
 
     - name: Build
-      #working-directory: ${{github.workspace}}
+      working-directory: ${{github.workspace}}
       run: |
         mkdir build
         cmake -S ./src -B ./build && make ./build
@@ -46,5 +46,5 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: binaries
-        path: ${{github.workspace}}/build/
+        path: ${{github.workspace}}/build/*.xpl
         if-no-files-found: error
