--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       working-directory: ${{github.workspace}}
       run: |
         mkdir build
-        cmake -S . -B ./build && make ./build
+        cd build && cmake .. && make
       
     - uses: actions/upload-artifact@v2
       with:
