--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,7 @@ jobs:
           - windows-latest
           - macos-latest
 
-    #runs-on: ${{matrix.os}}
-    runs-on: windows-latest
+    runs-on: ${{matrix.os}}
 
     steps:
     - uses: actions/checkout@v2
