--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         mkdir build
         cd build
         cmake ..
-        make
+        make Makefile
       
     - uses: actions/upload-artifact@v2
       with:
