--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,8 @@ jobs:
         mkdir build
         cd build
         cmake ..
-        make Makefile
+        ls
+        make
       
     - uses: actions/upload-artifact@v2
       with:
