--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,6 @@ jobs:
       shell: bash
       run: |
         choco install git cmake
-        choco install mingw
-        echo "CMAKE_GENERATOR=MinGW Makefiles" >> $GITHUB_ENV
 
     - name: "Linux: Install dependency libraries"
       if: runner.os == 'Linux'
@@ -44,7 +42,10 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake ..
+        if ["$RUNNER_OS" == "Windows"]; then
+          cmake -G "MinGW Makefiles" -S .. -B .
+        else
+          cmake ..
         ls
         make
       
