--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        if ["$RUNNER_OS" == "Windows"] then
+        if ("$RUNNER_OS" == "Windows") then
           cmake -G "MinGW Makefiles" -S .. -B .
         else
           cmake ..
