--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
       shell: bash
       run: |
         choco install git cmake
+        echo "CMAKE_GENERATOR=MinGW Makefiles" >> $GITHUB_ENV
 
     - name: "Linux: Install dependency libraries"
       if: runner.os == 'Linux'
@@ -43,11 +44,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        if ["$RUNNER_OS" == "Windows"]; then
-          cmake -G "MinGW Makefiles" -S .. -B .
-        else
-          cmake ..
-        fi
+        cmake ..
         ls
         make
       
