--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake ..
+        cmake .. -G "NMake Makefiles"
         nmake
 
     - name: Build for linux or macos
