--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
       if: runner.os == 'Windows'
       working-directory: ${{github.workspace}}
       run: |
+        choco install nmake
         mkdir build
         cd build
         cmake .. -G "NMake Makefiles"
