--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
+        #  - ubuntu-latest
           - windows-latest
-          - macos-latest
+        #  - macos-latest
 
     runs-on: ${{matrix.os}}
 
