--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with: 
+        submodules: true
+        
     - uses: ilammy/msvc-dev-cmd@v1
 
     - name: Build for windows
