Commented out macOS build for now
Build errors with regards to ARM I think. Use Lua-version for now.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
-          - macos-latest
+#          - macos-latest
 
     runs-on: ${{matrix.os}}
 
@@ -59,9 +59,9 @@ jobs:
         path: ${{github.workspace}}/build/*.xpl
         if-no-files-found: error
 
-    - uses: actions/upload-artifact@v2
-      if: runner.os == 'macOS'
-      with:
-        name: mac
-        path: ${{github.workspace}}/build/*.xpl
-        if-no-files-found: error
+#    - uses: actions/upload-artifact@v2
+#      if: runner.os == 'macOS'
+#      with:
+#        name: mac
+#        path: ${{github.workspace}}/build/*.xpl
+#        if-no-files-found: error
