init: started work on PID monitoring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+eframe = "0.19.0"
+egui = "0.19.0"
 simconnect = { git = "https://github.com/olejorga/simconnect", branch = "main" }
